# MaxScale

./: CMakeLists.txt
Documentation/About/: Limitations.md
Documentation/Getting-Started/: Configuration-Guide.md
Documentation/Release-Notes/: MaxScale-2.4.0-Release-Notes.md
Documentation/Routers/: SchemaRouter.md
Documentation/Upgrading/: Upgrading-To-MaxScale-2.4.md
cmake/: BuildMariaDBConnector.cmake  defaults.cmake  package_rpm.cmake
include/maxscale/: config.hh  monitor.hh
maxscale-system-test/: CMakeLists.txt  avro.cpp  mariadb_nodes.cpp  maxscales.cpp  maxscales.h  mm.cpp  mxs2355_wrong_auth.cpp  mxs729_maxadmin.cpp  mxs822_maxpasswd.cpp  nodes.cpp  nodes.h  pam_authentication.cpp  testconnections.cpp
maxscale-system-test/cnf/: maxscale.cnf.template.pam_authentication
maxscale-system-test/docker-compose/: build.sh  docker-compose.yml
maxscale-system-test/docker-compose/mariadb/: Dockerfile
maxscale-system-test/docker-compose/maxscale/: Dockerfile
maxscale-system-test/docker-compose/sql/master/: users.sql
query_classifier/qc_sqlite/: qc_sqlite.cc
replicator/: CMakeLists.txt  cdc-replicator.service  config.hh  executor.cc  executor.hh  main.cc  processor.hh  replicator.cc  replicator.hh  sql.cc  sql.hh  table.cc  table.hh
replicator/src/: config.cc  config.hh  replicator.cc  replicator.hh  sql.cc  sql.hh  table.cc  table.hh
server/core/: config.cc  config_runtime.cc  dcb.cc  modutil.cc  monitor.cc  mysql_utils.cc  service.cc  utils.cc
server/core/internal/: config.hh  service.hh
server/modules/include/: blr_constants.hh
(+11 files in other folders)
